(library
 (libraries base64)
 (name kittyimg)
 (public_name kittyimg)
 (modules kittyimg))

(library
  (libraries kittyimg notty unix)
  (name nottyimg)
  (public_name kittyimg.notty)
  (modules :standard \ kittyimg)
  (foreign_stubs (language c) (names more_winsize)))

(rule
  (target rowcolumn-diacritics.txt)
  (action
    (with-stdout-to
      %{target}
      (bash "curl https://sw.kovidgoyal.net/kitty/_downloads/f0a0de9ec8d9ff4456206db8e0814937/rowcolumn-diacritics.txt"))))

(rule
  (target rowcolumns.ml)
  (deps rowcolumn-diacritics.txt)
  (action
    (with-stdout-to
      %{target}
      (progn
        (echo "let diacritics = [|\n")
        (bash "tail -n +14 %{deps} | less | cut -d';' -f1 | sed 's/.*/  Uchar.of_int 0x\\0;/g'")
        (echo "|]")))))
